# GUI-ensimag-

./: CMakeLists.txt  README.md
_win/: eibase32.lib  eibase64.lib
clion/: CMakeLists.txt
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  frame
include/: ei_application.h  ei_application_extension.h  ei_border.h  ei_button.h  ei_draw.h  ei_draw_extension.h  ei_event.h  ei_event_handler.h  ei_frame.h  ei_geometrymanager.h  ei_gridder.h  ei_placer.h  ei_toplevel.h  ei_types.h  ei_widget.h  ei_widget_extension.h  ei_widgetclass.h  hw_interface.h
src/: ei_application.c  ei_border.c  ei_button.c  ei_draw.c  ei_draw_extension.c  ei_event.c  ei_event_handler.c  ei_frame.c  ei_geometrymanager.c  ei_gridder.c  ei_placer.c  ei_toplevel.c  ei_widget.c  ei_widget_extension.c  ei_widgetclass.c
tests/: button.c  button_test2.c  frame.c  frame_test2.c  gridder.c  hello_world.c  minesweeper.c  minimal.c  pacman.c  puzzle.c  toplevel_test.c  two048.c  widgets_test.c
